fix regresssion of json wallet serialization with jdk25